--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "rdf-ext": "^0.3.0",
+    "rdf-store-ldp": "^0.3.1",
     "underscore": "^1.8.3"
   },
   "license": "MIT",
